Task 17 Fix. Change text-align to align-items in .section-footer rule in css.

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -434,7 +434,7 @@ a:active {
 }
 .section-footer {
   padding: var(--section-footer-padding);
-  text-align: var(--section-footer-align);
+  align-items: var(--section-footer-align);
 }
 .section-title {
     font-family: var(--font-family-title);
